pkg/lang/testdata/ub/types/valid/deep.ub
optional(list(object({
  endpoints: list(object({
    host: string,
    ports: tuple(integer, integer),
  })),
  metadata: map(string),
})))
