pkg/lang/testdata/ub/types/invalid/open-of-optional.ub
open(optional(object({ a: string })))
